<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.AnalyticFragment">

    <ImageView
        android:id="@+id/im_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fifth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/im_logo"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_analytics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_extrabolditalic"
        android:text="@string/analytics"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_logo" />

    <TextView
        android:id="@+id/tv_add_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/add_data"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_analytics"
        app:layout_constraintStart_toStartOf="@+id/tv_analytics"
        app:layout_constraintTop_toBottomOf="@+id/tv_analytics" />

    <EditText
        android:id="@+id/edt_distance"
        style="@style/edit_text_login"
        android:gravity="center"
        android:hint="@string/distance"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_data"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edt_sit_ups"
        style="@style/edit_text_login"
        android:gravity="center"
        android:hint="@string/sit_ups"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_distance"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_put_data"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/orange_background"
        android:fontFamily="@font/montserrat_extrabolditalic"
        android:gravity="center"
        android:text="@string/put"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_progress_label"
        app:layout_constraintEnd_toEndOf="@+id/edt_sit_ups"
        app:layout_constraintStart_toStartOf="@+id/edt_sit_ups"
        app:layout_constraintTop_toBottomOf="@+id/edt_sit_ups" />

    <ProgressBar
        android:id="@+id/pb_analytics"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:max="25000"
        android:progressDrawable="@drawable/gradient_progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_progress_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat_extrabolditalic"
        android:text="@string/progress"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/pb_analytics"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/edt_sit_ups" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_points_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat_extrabolditalic"
        android:textColor="@color/app_orange"
        android:textSize="25sp"
        android:text="@string/_0"
        app:layout_constraintBottom_toTopOf="@+id/pb_analytics"
        app:layout_constraintStart_toEndOf="@+id/tv_progress_label"
        tools:text="15000" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/p"
        android:fontFamily="@font/montserrat_extrabolditalic"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_points_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_points_count"
        app:layout_constraintTop_toTopOf="@+id/tv_points_count" />


</androidx.constraintlayout.widget.ConstraintLayout>